# astap_cpp

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  NOTICE  README.md  build_cli  build_frameworks  build_gui  run_tests.sh
.github/workflows/: build.yml
cli/: detect_stars.cpp  main.cpp  stb_image_decoder.cpp  stb_image_decoder.h
gui/: CMakeLists.txt
gui/src/: aavso_dialog.cpp  aavso_dialog.h  annotation_scanner.cpp  annotation_scanner.h  astrometry_net_dialog.cpp  astrometry_net_dialog.h  controls_panel.cpp  controls_panel.h  focus_dialog.cpp  focus_dialog.h  histogram_widget.cpp  histogram_widget.h  image_inspector_dialog.cpp  image_inspector_dialog.h  image_viewer.cpp  image_viewer.h  light_curve_view.cpp  light_curve_view.h  live_stack_window.cpp  live_stack_window.h  log_window.cpp  log_window.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  photometry_dialog.cpp  photometry_dialog.h  preferences_dialog.cpp  preferences_dialog.h  qt_http_client.cpp  qt_http_client.h  qt_image_decoder.cpp  qt_image_decoder.h  solve_dialog.cpp  solve_dialog.h  sqm_dialog.cpp  sqm_dialog.h  stack_window.cpp  stack_window.h  (+2 more)
src/: types.h
src/analysis/: annotation.cpp  annotation.h  asteroid.cpp  asteroid.h  asteroid_overlay.cpp  asteroid_overlay.h  constellations.cpp  constellations.h  contour.cpp  contour.h  image_sharpness.cpp  image_sharpness.h  inspector.cpp  inspector.h
src/core/: aavso_collect.cpp  aavso_collect.h  aavso_report.cpp  aavso_report.h  aberration.cpp  aberration.h  demosaic.cpp  demosaic.h  ephemerides.cpp  ephemerides.h  fits.cpp  fits.h  globals.cpp  globals.h  hjd.cpp  hjd.h  hyperbola.cpp  hyperbola.h  image_io.cpp  image_io.h  imaging.cpp  imaging.h  link_stubs.cpp  online.cpp  online.h  photometry.cpp  photometry.h  photometry_catalog.cpp  platform.cpp  platform.h  sqm.cpp  sqm.h  util.cpp  util.h  wcs.cpp  wcs.h
src/image/: avi.cpp  avi.h  local_corrections.cpp  local_corrections.h  tiff.cpp  tiff.h  xisf.cpp  xisf.h  yuv4mpeg2.cpp  yuv4mpeg2.h
src/reference/: online_gaia.cpp  online_gaia.h  star_database.cpp  star_database.h  stars_wide_field.cpp  stars_wide_field.h
src/solving/: astrometric_solving.cpp  astrometric_solving.h  astrometry_net.cpp  astrometry_net.h  calc_trans_cubic.cpp  calc_trans_cubic.h  focus_fit.cpp  focus_fit.h  star_align.cpp  star_align.h
src/stacking/: gaussian_blur.cpp  gaussian_blur.h  live_monitoring.cpp  live_monitoring.h  live_stacking.cpp  live_stacking.h  raster_rotate.cpp  raster_rotate.h  stack.cpp  stack.h  stack_routines.cpp  stack_routines.h
tests/: CMakeLists.txt  aavso_report_test.cpp  aberration_test.cpp  annotation_test.cpp  asteroid_test.cpp  calc_trans_cubic_test.cpp  cli_test.cpp  constellations_test.cpp  contour_test.cpp  demosaic_test.cpp  ephemerides_test.cpp  gaussian_blur_test.cpp  hjd_test.cpp  hyperbola_test.cpp  image_sharpness_test.cpp  imaging_test.cpp  inspector_test.cpp  online_gaia_test.cpp  photometry_calibration_test.cpp  raster_rotate_test.cpp  sqm_test.cpp  star_align_test.cpp  star_database_test.cpp  util_test.cpp  wcs_test.cpp
